--- a/index.html
+++ b/index.html
@@ -227,9 +227,26 @@
       <img src="hoakhongnen.png" alt="flower meme">
     </div>
 
-    <h1 id="greeting">Chúc Mừng Ngày Phụ Nữ Việt Nam 20/10 💖</h1>
-    <p id="message">Chúc em luôn xinh đẹp, rạng rỡ và hạnh phúc mỗi ngày! 🌸</p>
-    <p>— Gửi lời yêu thương từ 💌 <b>Dương Quốc Huy</b> 💐</p>
+    <h1 id="greeting">💖 Chúc Mừng Ngày Phụ Nữ Việt Nam 20/10 💐</h1>
+
+<p id="message">
+Nhân ngày 20/10, xin gửi đến em những lời chúc chân thành và ngọt ngào nhất!  
+Chúc em luôn mạnh mẽ, tự tin, và giữ mãi nụ cười rạng rỡ trên môi.  
+Không chỉ hôm nay, mà mỗi ngày đều tràn đầy yêu thương, niềm vui và bình yên. 🌸
+</p>
+
+<p>
+Cảm ơn em vì đã luôn dịu dàng, tốt bụng và mang đến năng lượng tích cực cho mọi người xung quanh.  
+Em chính là bông hoa đẹp nhất, tỏa hương trong khu vườn cuộc sống này. 🌷
+</p>
+
+<p>
+Hãy luôn yêu bản thân, sống thật hạnh phúc và theo đuổi những điều khiến trái tim em mỉm cười. 💫  
+Dù thời gian có trôi qua, mong rằng em vẫn luôn xinh đẹp, duyên dáng và đáng yêu như bây giờ. 💞
+</p>
+
+<p>— Gửi lời yêu thương từ 💌 <b>Dương Quốc Huy</b> 💐</p>
+
   </div>
 
   <!-- 🎵 Nhạc nền -->
